gloves for applications/utilities

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-05  Jakub Steiner <jimmac@ximian.com>
 
+	* applications-utilities: working gloves (household) for utilities
+
+2006-01-05  Jakub Steiner <jimmac@ximian.com>
+
 	* applications-other: this is fairly abstract so I thought making
 		it very similar to the generic executable will be good. color just
 		randomly, looked weird in green, red looked like a warning.
