--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-06  Jakub Steiner <jimmac@ximian.com>
+
+	* network-wireless-encrypted: WPA/WEP encrypted networks
+
 2006-01-05  Jakub Steiner <jimmac@ximian.com>
 
 	* applications-utilities: working gloves (household) for utilities
