--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-01-06  Jakub Steiner <jimmac@ximian.com>
 
+	* preferences-system: renamed from preferences-desktop
+	* preferences-desktop: some sort of a presudo widget (switches)
+
+2006-01-06  Jakub Steiner <jimmac@ximian.com>
+
 	* input-mouse: fix aspect, get rid of MS Intellimouse elements.
 	* preferences-desktop-peripherals: hopefully won't imply
 		input-devices only
