--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-06  Jakub Steiner <jimmac@ximian.com>
 
+	* help-contents: removed an uglie. better nothing that that :)
+
+2006-01-06  Jakub Steiner <jimmac@ximian.com>
+
 	* preferences-desktop-locale: l10n settings
 
 2006-01-06  Jakub Steiner <jimmac@ximian.com>
