--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-06  Rodney Dawes  <dobey@novell.com>
+
+	* configure.ac: Up version to 0.6.4 for release
+
 2006-01-06  Jakub Steiner <jimmac@ximian.com>
 
 	* applications-utilities: removed due to
