--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-06  Jakub Steiner <jimmac@ximian.com>
+
+	* preferences-desktop-locale: misplaced locale prefs icon (now in
+		apps)
+	
 2006-01-06  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.6.4 for release
