--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-09  Jakub Steiner <jimmac@ximian.com>
+
+	* format-text-*: non-framed versions from Lapo 
+
 2006-01-06  Jakub Steiner <jimmac@ximian.com>
 
 	* preferences-desktop-locale: misplaced locale prefs icon (now in
