new junk mail icon from andreasn

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
 
+	* mail-mark-junk: junk mail icon from Andreas Nilsoon. Slightly
+		touched up
+	
+2006-01-09  Jakub Steiner <jimmac@ximian.com>
+
 	* format-text-*: non-framed versions from Lapo 
 
 2006-01-06  Jakub Steiner <jimmac@ximian.com>
