--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
 
+	* mail-reply-sender: contributed by Garrett Le Sage (edited)
+
+2006-01-09  Jakub Steiner <jimmac@ximian.com>
+
 	* mail-mark-junk: junk mail icon from Andreas Nilsoon. Slightly
 		touched up
 	
