search and replace

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
 
-	* mail-reply-sender: contributed by Garrett Le Sage (edited)
+	* edit-find-replace: by Garrett LeSage
+	
+2006-01-09  Jakub Steiner <jimmac@ximian.com>
+
+	* mail-reply-sender: contributed by Garrett LeSage (edited)
 
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
 
