--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
 
+	* mail-reply-all: another cut'n'paste job
+
+2006-01-09  Jakub Steiner <jimmac@ximian.com>
+
 	* edit-find-replace: by Garrett LeSage
 	
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
