better bulb shape

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
 
+	* 22x22/status/dialog-information: based on garrett's work
+
+2006-01-09  Jakub Steiner <jimmac@ximian.com>
+
 	* mail-reply-all: another cut'n'paste job
 
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
