--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
 
+	* 22x22/actions/format-text-italic: fix output dimensions
+
+2006-01-09  Jakub Steiner <jimmac@ximian.com>
+
 	* 22x22/status/dialog-information: based on garrett's work
 
 2006-01-09  Jakub Steiner <jimmac@ximian.com>
