--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-11  Jakub Steiner <jimmac@ximian.com>
+
+	* x-office-calendar: calendar mimetype
+
 2006-01-10  Jakub Steiner <jimmac@ximian.com>
 
 	* scalable/format-text-*: making more tangoish.
