--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-11  Jakub Steiner <jimmac@ximian.com>
 
+	* x-office-presentation: powerpoint sorta thing
+
+2006-01-11  Jakub Steiner <jimmac@ximian.com>
+
 	* x-office-calendar: calendar mimetype
 
 2006-01-10  Jakub Steiner <jimmac@ximian.com>
