--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-11  Jakub Steiner <jimmac@ximian.com>
 
+	* mail-forward: based on contribution by Garrett LeSage
+	
+2006-01-11  Jakub Steiner <jimmac@ximian.com>
+
 	* mail-send-receive: kinda lame
 
 2006-01-11  Jakub Steiner <jimmac@ximian.com>
