--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* list-add:
 	* list-remove: add/remove icons submitted by Andreas Nilsson
+	* edit-delete: another submission from Andreas
 	
 2006-01-11  Jakub Steiner <jimmac@ximian.com>
 
