2006-01-22  Jakub Steiner <jimmac@ximian.com>
* 16x16/animations/Makefile.am
*16x16/animations/process-working.png
*16x16/Makefile.am
*22x22/animations/Makefile.am
*22x22/animations/process-working.png
*22x22/Makefile.am
*configure.ac: default throbber. Don't really feel like making
the scalable version. If somebopdy feels like applying some svg

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2006-01-22  Jakub Steiner <jimmac@ximian.com>
+
+	* 16x16/animations/Makefile.am
+	*	16x16/animations/process-working.png
+	*	16x16/Makefile.am
+	*	22x22/animations/Makefile.am
+	*	22x22/animations/process-working.png
+	*	22x22/Makefile.am
+	*	configure.ac: default throbber. Don't really feel like making
+		the scalable version. If somebopdy feels like applying some svg
+		export magick, I can provide the blender source file.
+	
 2006-01-20  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.6.6 for release
