--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-02-16  Jakub Steiner <jimmac@ximian.com>
 
+	* {16x16,22x22}/status/dialog-warning.png: lighter versions from
+		Steven Garrity
+
+2006-02-16  Jakub Steiner <jimmac@ximian.com>
+
 	* audio-volume-*: based on work by Lapo Calamandrei
 
 2006-02-10  Jakub Steiner <jimmac@ximian.com>
