--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-17  Jakub Steiner <jimmac@ximian.com>
+
+	* scalable/status/network*: sync the "active" blue with the
+		bitmaps
+
 2006-02-17  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up  version to 0.7.0 for release
