add Lapo and Ryan

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
+Lapo Calamandrei <l_calamandrei@neri-group.com>
+Ryan Collier <rcollier@novell.com>
 Rodney Dawes <dobey@novell.com>
 Andreas Nilsson <nisses.mail@home.se>
 Tuomas Kuosmanen <tigert@tigert.com>
