--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-03  Jakub Steiner <jimmac@ximian.com>
+
+	* AUTHORS: add Lapo and Ryan
+
 2006-02-24  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.7.1 for release
