different e-mail for lapo

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Lapo Calamandrei <l_calamandrei@neri-group.com>
+Lapo Calamandrei <calamandrei@gmail.com>
 Ryan Collier <rcollier@novell.com>
 Rodney Dawes <dobey@novell.com>
 Andreas Nilsson <nisses.mail@home.se>
