--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Steven Garrity <sgarrity@silverorange.com>
 Lapo Calamandrei <calamandrei@gmail.com>
 Ryan Collier <rcollier@novell.com>
 Rodney Dawes <dobey@novell.com>
