--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-04-21  Rodney Dawes  <dobey@novell.com>
+
+	* AUTHORS: Add Steven Garrity to the list
+	
+	* scalable/mimetypes/Makefile.am: Fix broken use of \ followed by a
+	blank line
+
 2006-04-21  Jakub Steiner <jimmac@ximian.com>
 
 	* x-office-drawing: for office illustration files
