generic flash memory media

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-05-12  Jakub Steiner <jimmac@ximian.com>
 
+	* media-=memory: generic flash memory media
+
+2006-05-12  Jakub Steiner <jimmac@ximian.com>
+
 	* *svg: use a less stylistic shadow.
 
 2006-04-21  Rodney Dawes  <dobey@novell.com>
