cute emoticon from ulisse

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-19  Jakub Steiner <jimmac@ximian.com>
+
+	* face-monkey: cute monkey icon from Ulisse. changed shading
+		slightly.
+	
 2006-05-12  Jakub Steiner <jimmac@ximian.com>
 
 	* media-=memory: generic flash memory media
