--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-02  Jakub Steiner <jimmac@ximian.com>
+
+	* 16x16,22x22/devices/printer-remote: has been removed from the
+		naming spec.
+	
 2006-05-19  Jakub Steiner <jimmac@ximian.com>
 
 	* face-monkey: cute monkey icon from Ulisse. changed shading
