2006-06-19  Jakub Steiner <jimmac@ximian.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-19  Jakub Steiner <jimmac@ximian.com>
+
+	* edit-delete: try the shredder metaphor.
+
 2006-06-13  Jakub Steiner <jimmac@ximian.com>
 
 	* 32x32/*: great contribution by Lapo Calamandrei. The new
