New 22x22 utilities-terminal, added Ulisse to the AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Ulisse Perusin <uli.peru@gmail.com>
 Steven Garrity <sgarrity@silverorange.com>
 Lapo Calamandrei <calamandrei@gmail.com>
 Ryan Collier <rcollier@novell.com>
