--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-07-04  Lapo Calamandrei <calamandrei@gmail.com>
+
+	* 22x22/utilities-terminal: new icon.
+
+	* AUTHORS: added Ulisse to the list.
+
 2006-06-19  Jakub Steiner <jimmac@ximian.com>
 
 	* edit-delete: try the shredder metaphor.
