new shadows for 22x22/apps

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-05  Lapo Calamandrei <calamandrei@gmail.com>
+
+	* 22x22/apps/*: new shadows.
+
 2006-07-04  Lapo Calamandrei <calamandrei@gmail.com>
 
 	* 22x22/utilities-terminal: new icon.
