same scissors here as well

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2006-07-12  Jakub Steiner <jimmac@ximian.com>
 
-	* 22x22/actions/edit-cut*: color and shape fixes based on artwoirk
+	* 22x22/categories/applications-accessories*: 
+	* 22x22/actions/edit-cut*: color and shape fixes based on artwork
 	form sacrat AT gmail DOT com. Fixes #7499
 	
 2006-07-07  Rodney Dawes  <dobey@novell.com>
