straighten the monitor

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2006-07-17  Jakub Steiner <jimmac@ximian.com>
 
+	* 22x22/actions/system-lock-screen.xcf.bz2
+	* 22x22/actions/system-lock-screen.png
 	* 22x22/apps/preferences-desktop-screensaver.png
 	* 22x22/apps/preferences-desktop-screensaver.xcf.bz2
 	* 22x22/apps/preferences-desktop-wallpaper.png
