--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-07-26  Jakub Steiner <jimmac@ximian.com>
 
+	* 22x22/actions/list-add, list-remove: drop the shadow
+
+2006-07-26  Jakub Steiner <jimmac@ximian.com>
+
 	* {16x16,22x22}/actions/edit-{undo,redo}*: edit color and shape
 		slightly. Bug #7632
 
