--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-08  Jakub Steiner <jimmac@ximian.com>
+
+	* scalable/actions/edit-undo.svg: screwed up a month ago. Revert.
+		fixes #8187
+		
 2006-07-26  Jakub Steiner <jimmac@ximian.com>
 
 	* {32x32,scalable}/actions/view-fullscreen: lighten up the
