--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-30  Lapo Calamandrei <calamandrei@gmail.com>
+
+	* */devices/{media,drive}-cdrom renamed to new naming specs names.
+
 2006-09-08  Jakub Steiner <jimmac@ximian.com>
 
 	* scalable/actions/edit-undo.svg: screwed up a month ago. Revert.
