--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* */devices/{media,drive}-cdrom renamed to new naming specs names.
 
+	* */devices/media-memory renamed to new naming specs names.
+
 2006-09-08  Jakub Steiner <jimmac@ximian.com>
 
 	* scalable/actions/edit-undo.svg: screwed up a month ago. Revert.
