--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-16  Jakub Steiner <jimmac@ximian.com>
+
+	* */apps/preferences-desktop-locale.*: add shading to make it
+		appear less flat
+
 2007-02-15  Rodney Dawes  <dobey@novell.com>
 
 	* */apps/preferences-desktop-locale.*: Replace actual flags with
