--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-16  Rodney Dawes  <dobey@novell.com>
 
+	* configure.ac: Up version to 0.8.0 for release
+	Up icon-naming-utils requirement to 0.8.2
+
+2007-02-16  Rodney Dawes  <dobey@novell.com>
+
 	* svg2png.sh.in: Handle having $(srcdir) passed in for the source
 	icon when getting the ICONNAME variable to use for output
 	Echo the command we're going to run to stdout
