--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-03-04  Rodney Dawes  <dobey@novell.com>
+
+	* */emotes/Makefile.am:
+	* */emotes/face-devil-grin.*:
+	* */emotes/face-devilish.*:
+	Rename face-devil-grin to face-devilish as per the updated spec
+
 2007-02-16  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.8.0 for release
