--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-03  Jakub Steiner <jimmac@ximian.com>
+
+	* 16x16/emblems/emblem-favorite.svg
+	* 22x22/emblems/emblem-favorite.svg: use vectors to avoid jaggies. 
+
 2007-03-04  Rodney Dawes  <dobey@novell.com>
 
 	* */emotes/Makefile.am:
