2007-08-10  Jakub Steiner <jimmac@ximian.com>
* 22x22/mimetypes/audio-x-generic.png: properly hinted small res.
Fixes bug #10883

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-08-10  Jakub Steiner <jimmac@ximian.com>
 
+	* 22x22/mimetypes/audio-x-generic.png: properly hinted small res.
+		Fixes bug #10883
+
+2007-08-10  Jakub Steiner <jimmac@ximian.com>
+
 	* apps/preferences-desktop-sound:
 	* actions/preferences-desktop-multimedia: renaming as per the
 		latest naming spec.
