--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>
 
+	* configure.ac: Up version to 0.8.1 for release
+
+2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>
+
 	* scalable/*/Makefile.am:
 	Add uninstall-local rule to remove all the generated PNG files
 
