2007-08-23  Jakub Steiner <jimmac@ximian.com>
* 16x16/status/network-wireless-encrypted.png: slightly more
recognisable shape.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-08-23  Jakub Steiner <jimmac@ximian.com>
 
+	* 16x16/status/network-wireless-encrypted.png: slightly more
+		recognisable shape.
+
+2007-08-23  Jakub Steiner <jimmac@ximian.com>
+
 	* text-x-script: add some text to address bug #6203
 
 2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>
